refactor docs build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,6 @@ install:
   - sudo apt-get install graphviz
   - pip install hanziconv
   - npm install gitbook-cli -g
-  - cd docs
-  - npm install safe-buffer
-  - cd ..
-  - gitbook install docs
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -27,14 +23,20 @@ jobs:
       script: ./gradlew check
     - stage: build_docs
       script:
-      - cp -r docs/zh_TR/* docs/zh_CN/ && python .travis/generate-zh_CN.py -o docs/zh_CN -s docs/zh_TR && gitbook build docs
+      - cp -R docs docs-target
+      - cp -r docs-target/zh_TR/* docs-target/zh_CN/
+      - python .travis/generate-zh_CN.py -o docs-target/zh_CN -s docs-target/zh_TR
+      - cd docs-target
+      - npm install safe-buffer
+      - cd ..
+      - gitbook install docs-target
+      - gitbook build docs-target
       deploy:
         provider: pages
         skip-cleanup: true
         github-token: $GITHUB_TOKEN
         keep-history: true
-        local-dir: docs/_book
+        local-dir: docs-target/_book
 stages:
   - test
-  - name: build_docs
-    if: branch = release
+  - build_docs
