--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ language: java
 jdk:
   - openjdk8
 node_js: "7"
-dist: bionic
+dist: xenial
 before_install:
+  - pyenv global system 3.7.1
 install:
   - sudo apt-get install graphviz
-  - pip3 install hanziconv
+  - pip install hanziconv
   - npm install gitbook-cli -g
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -24,7 +25,7 @@ jobs:
       script:
       - cp -R docs docs-target
       - cp -r docs-target/zh_TR/* docs-target/zh_CN/
-      - python3 .travis/generate-zh_CN.py -o docs-target/zh_CN -s docs-target/zh_TR
+      - python .travis/generate-zh_CN.py -o docs-target/zh_CN -s docs-target/zh_TR
       - cd docs-target
       - npm install safe-buffer
       - cd ..
