--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,8 @@ jdk:
 node_js: "7"
 dist: xenial
 before_install:
-  - pyenv global system 3.7.1
 install:
   - sudo apt-get install graphviz
-  - pip3 install hanziconv
   - npm install gitbook-cli -g
 before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -25,7 +23,9 @@ jobs:
       script:
       - cp -R docs docs-target
       - cp -r docs-target/zh_TR/* docs-target/zh_CN/
-      - python3 .travis/generate-zh_CN.py -o docs-target/zh_CN -s docs-target/zh_TR
+      - pyenv global system 3.7.1
+      - pip install hanziconv
+      - python .travis/generate-zh_CN.py -o docs-target/zh_CN -s docs-target/zh_TR
       - cd docs-target
       - npm install safe-buffer
       - cd ..
